# Flowfree-Solver

./: .gitignore  Board.cs  BtAlgo.cs  Data.cs  FC.cs  PNS.cs  PSBoard.cs  PSState.cs  Program.cs  README.md  Record.cs  State.cs  TreeNode.cs  pyproject.toml  record.csv  trial.csv
data/: improved_benchmark_result_3mins.csv  pns_benchmark_result_3mins.csv  port_benchmark_result_3min.csv  simple_benchmark_result.csv  simple_benchmark_result_3mins.csv
flowfree/: stats.py  utils.py
flowfree/improved_port/: __init__.py  board.py  fc.py  improved_port.md  propagation.py  runner.py  solver.py  state.py  validators.py
flowfree/pns_solver/: __init__.py  board.py  node.py  pns_solver.md  propagation.py  runner.py  solver.py
flowfree/python_port/: __init__.py  csp_board.py  csp_fc.py  csp_solver.py  csp_state.py  python_port.md  runner.py
flowfree/simple_solver/: __init__.py  board.py  propagation.py  runner.py  simple_solver.md  solver.py
src_old/: BtAlgo.cs  Data.cs  FC.cs
